# goxel-curly

./: .gitignore  CMakeLists.txt  RENDERING_AND_TILE_SYSTEM_NOTES.md
.claude/: settings.local.json
ext_src/json/: json.c
ext_src/quickjs/: quickjs.c
ext_src/tinyobjloader/: tinyobj_loader_c.h
ext_src/xxhash/: xxhash.c
src/: assets.c  goxel.c  gui.cpp  image.c  main.c  model3d.c  model3d.h  model_manager.c  model_manager.h  render.c  render.h  volume.c  volume.h  volume_to_vertices.c  volume_utils.c  volume_utils.h
src/assets/: fonts.inl  icons.inl  images.inl  models.inl  other.inl  palettes.inl  progs.inl  shaders.inl  sounds.inl  themes.inl
src/formats/: png_slices.c  wavefront.c
src/gui/: app.c  model_panel.c
tools/: create_assets.py
